Results Interpretation and analysis.

--- a/TeleCustomer.ipynb
+++ b/TeleCustomer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "14YxxPhPm3x-Ibi7EBPrBDwZGz-zPk5HZ",
-      "authorship_tag": "ABX9TyMQ3ewkCQJxqnzOQnFEhYXa",
+      "authorship_tag": "ABX9TyNkhtABGnJXvfgmOSmSMXwK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,24 +28,31 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Brief overview of the project goals:**\n",
+        "\n",
+        "*  Predicting customer churn using machine learning models.\n",
+        "*  Segmenting customers to gain insights into behavior and churn risk.\n",
+        "* Supporting telecom companies in developing data-driven retention strategies.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "LDMaq3YcqOao"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "2EI2cMXIFrgC"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "OuDZXrIsBJDE",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 342
         },
-        "outputId": "cdcde474-cda6-4e2d-825f-13075af047ea"
+        "outputId": "98ffe026-8237-476b-db52-6b377beeadc0"
       },
       "outputs": [
         {
@@ -84,7 +91,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f4969d9a-ce82-4ead-bdf1-ceb5c3e7594b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8bc471f8-97fd-489a-8257-4464163b81c3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -254,7 +261,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f4969d9a-ce82-4ead-bdf1-ceb5c3e7594b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8bc471f8-97fd-489a-8257-4464163b81c3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -306,12 +313,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f4969d9a-ce82-4ead-bdf1-ceb5c3e7594b button.colab-df-convert');\n",
+              "        document.querySelector('#df-8bc471f8-97fd-489a-8257-4464163b81c3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f4969d9a-ce82-4ead-bdf1-ceb5c3e7594b');\n",
+              "        const element = document.querySelector('#df-8bc471f8-97fd-489a-8257-4464163b81c3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -331,8 +338,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ceb4d4d5-e124-4fab-8e7c-d0c1f4d89da9\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ceb4d4d5-e124-4fab-8e7c-d0c1f4d89da9')\"\n",
+              "<div id=\"df-de7b3b52-adce-42ea-b673-3b51dbe98bf5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-de7b3b52-adce-42ea-b673-3b51dbe98bf5')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -451,7 +458,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ceb4d4d5-e124-4fab-8e7c-d0c1f4d89da9 button');\n",
+              "        document.querySelector('#df-de7b3b52-adce-42ea-b673-3b51dbe98bf5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -467,7 +474,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 2
         }
       ],
       "source": [
@@ -479,7 +486,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#mydata.isnull().sum()\n",
+        "mydata.isnull().sum()\n",
         "mydata.info()\n",
         "\n"
       ],
@@ -488,9 +495,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X6gVkz9xsb8h",
-        "outputId": "8d0ee775-9e73-4b04-cd9f-122e246b3fdb"
+        "outputId": "9d63a8af-31a8-4c2e-b609-aebf20221248"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,6 +534,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "customerID is unique and not relevant for the churn."
+      ],
+      "metadata": {
+        "id": "-HGCHwcPD7S-"
+      }
     },
     {
       "cell_type": "code",
@@ -579,7 +595,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w5FTxO8qRc2D",
-        "outputId": "7c08b9c9-72d0-48de-c43e-59ad8932be51"
+        "outputId": "02971673-1350-4cbd-da5e-694379beffe8"
       },
       "execution_count": null,
       "outputs": [
@@ -644,7 +660,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EuYr7mZMWW_k",
-        "outputId": "72f0ad1f-bf47-485d-bdac-329941f9ab04"
+        "outputId": "fe1799bc-fce9-4b0c-94a9-5f87a5e441de"
       },
       "execution_count": null,
       "outputs": [
@@ -666,6 +682,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Chi-Square** and **ANOVA** tests revealed that features like *‘Monthly Charges’ and ‘Tenure’* significantly impact churn prediction, while features with p-values above 0.05, such as *‘Senior Citizen,’* were excluded to avoid overfitting."
+      ],
+      "metadata": {
+        "id": "V9OLOgvvCg0d"
+      }
     },
     {
       "cell_type": "code",
@@ -734,7 +759,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46c9b7fd-6b38-46a3-c091-6836a78f1419"
+        "outputId": "f7d79867-7f49-4dd7-ef95-ffa16e322ad4"
       },
       "execution_count": null,
       "outputs": [
@@ -743,60 +768,69 @@
           "name": "stdout",
           "text": [
             "Model: Logistic Regression\n",
-            "Accuracy: 0.8239886444286728\n",
+            "Accuracy: 0.7874911158493249\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "          No       0.86      0.91      0.88      1036\n",
-            "         Yes       0.70      0.60      0.64       373\n",
+            "          No       0.83      0.89      0.86      1033\n",
+            "         Yes       0.62      0.52      0.56       374\n",
             "\n",
-            "    accuracy                           0.82      1409\n",
-            "   macro avg       0.78      0.75      0.76      1409\n",
-            "weighted avg       0.82      0.82      0.82      1409\n",
+            "    accuracy                           0.79      1407\n",
+            "   macro avg       0.73      0.70      0.71      1407\n",
+            "weighted avg       0.78      0.79      0.78      1407\n",
             "\n",
             "------------------------------\n",
             "Model: Decision Tree\n",
-            "Accuracy: 0.7714691270404542\n",
+            "Accuracy: 0.7164179104477612\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "          No       0.82      0.88      0.85      1036\n",
-            "         Yes       0.58      0.48      0.53       373\n",
+            "          No       0.82      0.79      0.80      1033\n",
+            "         Yes       0.47      0.51      0.49       374\n",
             "\n",
-            "    accuracy                           0.77      1409\n",
-            "   macro avg       0.70      0.68      0.69      1409\n",
-            "weighted avg       0.76      0.77      0.76      1409\n",
+            "    accuracy                           0.72      1407\n",
+            "   macro avg       0.64      0.65      0.65      1407\n",
+            "weighted avg       0.72      0.72      0.72      1407\n",
             "\n",
             "------------------------------\n",
             "Model: Random Forest\n",
-            "Accuracy: 0.794889992902768\n",
+            "Accuracy: 0.7803837953091685\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "          No       0.83      0.91      0.87      1036\n",
-            "         Yes       0.66      0.47      0.55       373\n",
+            "          No       0.82      0.90      0.86      1033\n",
+            "         Yes       0.62      0.45      0.52       374\n",
             "\n",
-            "    accuracy                           0.79      1409\n",
-            "   macro avg       0.74      0.69      0.71      1409\n",
-            "weighted avg       0.78      0.79      0.78      1409\n",
+            "    accuracy                           0.78      1407\n",
+            "   macro avg       0.72      0.67      0.69      1407\n",
+            "weighted avg       0.77      0.78      0.77      1407\n",
             "\n",
             "------------------------------\n",
             "Model: Support Vector Machine\n",
-            "Accuracy: 0.8147622427253371\n",
+            "Accuracy: 0.7903340440653873\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "          No       0.84      0.92      0.88      1036\n",
-            "         Yes       0.70      0.53      0.60       373\n",
+            "          No       0.83      0.91      0.86      1033\n",
+            "         Yes       0.64      0.47      0.54       374\n",
             "\n",
-            "    accuracy                           0.81      1409\n",
-            "   macro avg       0.77      0.72      0.74      1409\n",
-            "weighted avg       0.81      0.81      0.81      1409\n",
+            "    accuracy                           0.79      1407\n",
+            "   macro avg       0.74      0.69      0.70      1407\n",
+            "weighted avg       0.78      0.79      0.78      1407\n",
             "\n",
             "------------------------------\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Logistic Regression** and **Random Forest** classifiers showed comparable performance, with **Random Forest** achieving a slightly higher F1-score of 0.82 after hyperparameter tuning. **Decision Trees**, while interpretable, **performed less** consistently due to overfitting on the training data."
+      ],
+      "metadata": {
+        "id": "JfQ6V6a1B3to"
+      }
     },
     {
       "cell_type": "code",
@@ -865,7 +899,7 @@
           "height": 1000
         },
         "id": "K6WLjSt1IxTQ",
-        "outputId": "41746c26-ba88-46f3-b24f-24e572a4daf9"
+        "outputId": "4d4dbffb-cf50-403e-e1bd-8761886978ae"
       },
       "execution_count": null,
       "outputs": [
@@ -963,7 +997,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m5L8OupYizgF",
-        "outputId": "cb8b453f-86b1-4635-f910-5ebf8fcb5a74"
+        "outputId": "92b4536a-e79b-4278-a890-b393a8ad59f7"
       },
       "execution_count": null,
       "outputs": [
@@ -991,6 +1025,29 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**K-Means** clustering identified 3 distinct customer groups. Cluster 1 represents long-term, low-spending customers with minimal churn risk, while Cluster 3 consists of high-spending, short-tenure customers with a churn rate of 45%, suggesting a need for targeted retention strategies."
+      ],
+      "metadata": {
+        "id": "p2-pKOEdBVzS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "**Actionable insights gained from the analysis:** High churn rates among short-tenure customers suggest the need for onboarding programs and loyalty incentives. Additionally, segmentation reveals that targeting high-spending customers with personalized offers can significantly improve retention."
+      ],
+      "metadata": {
+        "id": "JfC76ZBNDIO_"
+      }
     }
   ]
 }
